Main finder view

--- a/app/views/finders/_show_header.html.erb
+++ b/app/views/finders/_show_header.html.erb
@@ -25,15 +25,21 @@
         </div>
       <% elsif topic_finder?(filter_params) %>
         <%= link_to topic_finder_parent(filter_params)['title'], topic_finder_parent(filter_params)['base_path'], class: 'govuk-link topic-finder__taxon-link' %>
-        <%= render partial: 'govuk_publishing_components/components/title', locals: {
-          title: content_item.title,
+        <%= render "govuk_publishing_components/components/heading", {
+          text: content_item.title,
           inverse: inverse,
+          heading_level: 1,
+          font_size: "xl",
+          margin_bottom: 8,
         } %>
       <% else %>
-        <%= render partial: 'govuk_publishing_components/components/title', locals: {
-          title: content_item.title,
+        <%= render "govuk_publishing_components/components/heading", {
+          text: content_item.title,
           context: title_context,
           inverse: inverse,
+          heading_level: 1,
+          font_size: "xl",
+          margin_bottom: 8,
         } %>
       <% end %>
 
