--- a/app/views/finders/_show_header.html.erb
+++ b/app/views/finders/_show_header.html.erb
@@ -66,7 +66,7 @@
 
   <% if content_item.related.any? %>
     <div class="related-links govuk-grid-column-one-third">
-      <ul class="js-finder-results">
+      <ul class="js-finder-results govuk-list">
         <% content_item.related.each do |link| %>
           <li class="related-links__item">
             <%= link_to link['title'], link['web_url'], class: "related-links__link" %>
