Remove excess left/right mobile spacing
- govuk-width-container should be only included once in the DOM, to wrap content with a maximum width on desktop and some padding left/right on mobile to stop content hitting the edge of the page
- included in multiple places here because sometimes content is in a blue full width background (inverse) and is needed on a more granular level
- however this didn't account for the existing class further up the DOM, so the padding was duplicated
- adding checks to prevent the govuk-width-container appearing unless in an inverse page

--- a/app/views/finders/show.html.erb
+++ b/app/views/finders/show.html.erb
@@ -29,10 +29,12 @@
       full_width: true,
       padding_top: 0
     } do %>
-      <%= render partial: 'show_header', locals: {
-        inverse: is_inverse?,
-        page_metadata: page_metadata(content_item, filter_params)
-      } %>
+      <div class="govuk-width-container">
+        <%= render partial: 'show_header', locals: {
+          inverse: is_inverse?,
+          page_metadata: page_metadata(content_item, filter_params)
+        } %>
+      </div>
     <% end %>
   <% else %>
     <%= render partial: 'show_header', locals: {
@@ -41,7 +43,7 @@
     } %>
   <% end %>
 
-  <div class="govuk-width-container">
+  <div class="<%= 'govuk-width-container' if is_inverse? %>">
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-one-third">
         <%= render partial: 'facet_collection'%>
