Remove unneeded styles
- govuk-checkboxes__label already has a margin bottom of 0, defined in the govuk-frontend Sass
- removing this appears to make no visual difference
- `app-c-search-page-heading` doesn't appear anywhere in this application and nowhere else in alphagov apart from in archived repos
- `finder-frontend-content` is only used to make the previous class more specific, so this can also now be removed

--- a/app/views/development/index.html.erb
+++ b/app/views/development/index.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, "Finder Frontend" %>
 
-<main class="finder-frontend-content govuk-main-wrapper">
+<main class="govuk-main-wrapper">
   <div id="content">
     <%= render "govuk_publishing_components/components/heading", {
       text: "Finder Frontend",
