Allow previewing serving configurations on Search API v2
Search API v2 now supports getting results through different serving
configs [1]. This allows us to (among other things) have a "preview"
serving config on which we can test out different boosting options.

We considered having a preview feature in Search Admin, but having the
ability here in Finder Frontend instead allows administrative users to
test different configurations more comprehensively, for example by using
filters and sorting, without having to reimplement half of Finder
Frontend in another app.

Having some (non-sensitive) debugging functionality in Finder Frontend
is also an existing pattern (see `debug` parameter for Search API v1
searches).

- Pass through the API used to `Search::QueryBuilder`
- Send `serving_config` parameter to Search API v2 if that is currently
  in use and the `debug_serving_config` parameter is in the request
- Add a banner to the UI to show when a non-default serving
  configuration is applied, and allow removing it
- Add a hidden field for the overridden serving config if given, so it
  persists across searches

[1]: https://github.com/alphagov/search-api-v2/pull/385

--- a/app/views/finders/show_all_content_finder.html.erb
+++ b/app/views/finders/show_all_content_finder.html.erb
@@ -38,6 +38,23 @@
     ga4_ecommerce_variant: result_set_presenter.sort_option&.fetch(:data_ga4_track_label, nil),
   },
 ) do %>
+
+  <% if result_set_presenter.debug_serving_config %>
+    <%= render "govuk_publishing_components/components/notice", {
+      title: "Previewing different serving configuration",
+    } do %>
+      <p class="govuk-body">
+        You are temporarily using the
+        <strong><%= result_set_presenter.debug_serving_config %></strong>
+        serving configuration for results from Search API v2.
+      </p>
+
+      <p class="govuk-body">
+        <%= link_to "Return to default serving configuration", url_for(filter_params.except(:debug_serving_config)), class: "govuk-link govuk-link--no-visited-state" %>
+      </p>
+    <% end %>
+  <% end %>
+
   <%= tag.form(
     method: "get",
     action: content_item.base_path,
@@ -51,6 +68,7 @@
     },
   ) do %>
     <%= hidden_field_tag :parent, @parent if @parent.present? %>
+    <%= hidden_field_tag :debug_serving_config, result_set_presenter.debug_serving_config if result_set_presenter.debug_serving_config %>
 
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds-from-desktop">
