Add separator to the bottom of the subfacet select
Other finders' facet sidebars typically receive a separator at the bottom, which seems to come for free from the components they use. The select does not render one, so we're adding it manually. Nonetheless, we only want to add the separator at the bottom of the "sub" facets, not the "main".

Also added a bit of margin/padding where needed.

--- a/app/views/finders/_nested_facet.html.erb
+++ b/app/views/finders/_nested_facet.html.erb
@@ -1,8 +1,19 @@
 <% add_gem_component_stylesheet("select") %>
 
-<%= render "govuk_publishing_components/components/select", {
-  id: nested_facet.key,
-  label: nested_facet.name,
-  full_width: true,
-  options: nested_facet.facet_options
-} %>
+<% content = capture do %>
+  <%= render "govuk_publishing_components/components/select", {
+    id: nested_facet.key,
+    label: nested_facet.name,
+    full_width: true,
+    options: nested_facet.facet_options
+  } %>
+<% end %>
+
+<% if nested_facet.is_main_facet? %>
+  <div class="govuk-!-margin-top-3">
+    <%= content %>
+  </div>
+<% else %>
+  <%= content %>
+  <hr class="govuk-section-break govuk-section-break--visible">
+<% end %>
