Configure `SearchFreshnessBoost` AB test
This sets up the `SearchFreshnessBoost` AB test for the all content
finder.

- Add pass-through `v2_serving_config` parameter to `Search::Query`
- Add `SearchFreshnessBoostAbTestable` mixin and use it to set serving
  config for all content finder
- Add hacky tests for `FindersController` (for some reason the AB test
  helpers don't like being used in an `around` block which makes this a
  bit verbose)

--- a/app/views/finders/show_all_content_finder.html.erb
+++ b/app/views/finders/show_all_content_finder.html.erb
@@ -11,6 +11,7 @@
     <meta name="govuk:discovery-engine-attribution-token" content="<%= result_set_presenter.discovery_engine_attribution_token %>">
   <% end %>
   <meta name="govuk:spelling-suggestion" content="<%= @spelling_suggestion_presenter.suggestions.first&.fetch(:keywords, "") %>">
+  <%= @requested_variant.analytics_meta_tag.html_safe if @requested_variant.present? %>
 <% end %>
 <% content_for :meta_title, content_item.title %>
 
