Fix selected counter layout in expander
- layout had been modified to use flexbox, but did not account for this extra JS inserted element, which was then included in the flex and looked incorrect
- adjusting JS and markup to allow selected element to fit outside of the flexbox, retaining the benefits to icon positioning, but still inside the heading element, so the number of selected items is still included in that text for screen readers

--- a/app/assets/stylesheets/components/_expander.scss
+++ b/app/assets/stylesheets/components/_expander.scss
@@ -22,11 +22,14 @@
 .govuk-frontend-supported {
   .app-c-expander__heading {
     position: relative;
+    margin: 0;
+  }
+
+  .app-c-expander__toggle {
     display: flex;
     flex-direction: row-reverse;
     justify-content: start;
     align-items: center;
-    margin: 0;
   }
 
   .app-c-expander__content {
@@ -92,5 +95,6 @@
   display: block;
   color: $govuk-text-colour;
   margin-top: 3px;
+  margin-left: 44px;
   @include govuk-font($size: 14);
 }
